syntax = "proto3";

option java_package = "org.lwl.netty.message.protobuf";
option java_outer_classname = "Header";

message HeaderP {
    int64 msgNum=1;

    MessageTypeEnum msgType=2;

    string msgTime=3;

    int32 flag = 4;

    int32 oneByte = 5;

    map<string, string> attachment=6;
}

enum MessageTypeEnum {
    UNKNOWN=0;
    LOGIN_REQ=1;
    LOGIN_RESP=2;
    LOGOUT=3;
    HEARTBEAT_REQ=4;
    HEARTBEAT_RESP=5;
    PROTOCOL_SUB=6;
    PROTOCOL_DATA=7;
}